working_with_few

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 build/*
 install/*
 log/*
+src/robotic_project/robotic_project/__pycache__/main_executer.cpython-38.pyc
+src/robotic_project/robotic_project/__pycache__/main_executer.cpython-38.pyc
+src/robotic_project/robotic_project/__pycache__/main_executer.cpython-38.pyc
